--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -71,6 +71,7 @@ $options-button-width: 36px;
 $item-container-outer-dividing-container-min-width: 525px;
 $edit-item-name-input-width: 600px;
 $edit-item-name-char-counter-container-width: 50px;
+$item-container-project-bugs-item-box-stats-container-width: 200px;
 
 //=========
 // Margins
