--- a/client/src/SCSS/home/projects-bugs-shared/list/listContainerCreateItemSidebar.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/list/listContainerCreateItemSidebar.scss
@@ -150,7 +150,7 @@
 		margin-bottom: 15px;
 		outline: none;
 		border: 0;
-		background-color: $light-blue-gray;
+		background-color: $light-navy-blue;
 		padding: 10px;
 		width: 100%;
 		color: white;
@@ -160,7 +160,7 @@
 	}
 	.form__submit:hover,
 	.form__submit:active {
-		background-color: $blue-gray;
+		background-color: $navy-blue;
 	}
 
 	// These classes are used by the custom hook that handles appearance
