--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -19,6 +19,9 @@ $very-light-blue-gray: #7390af;
 $light-blue-gray: #607c99;
 $blue-gray: #50677f;
 $dark-blue-gray: #215792;
+// Navy blues
+$light-navy-blue: #527294;
+$navy-blue: #45607e;
 // Blue for links
 $blue-link: #005ed8;
 // Reds
