--- a/client/src/SCSS/home/account/editAccountModals.scss
+++ b/client/src/SCSS/home/account/editAccountModals.scss
@@ -87,7 +87,7 @@
 		margin-bottom: $form-input-margin-bottom;
 		outline: none;
 		border: 0;
-		background: $light-blue-gray;
+		background: $light-navy-blue;
 		padding: 10px;
 		width: 100%;
 		color: white;
@@ -96,7 +96,7 @@
 	}
 	.form__submit:hover,
 	.form__submit:active {
-		background: $blue-gray;
+		background: $navy-blue;
 	}
 
 	.modal-links-container {
