--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerCommentsBoxIndividualComment.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerCommentsBoxIndividualComment.scss
@@ -44,7 +44,7 @@
 	.comment__centering-container__pair-container__submit-edit-button {
 		float: left;
 		border: 1px solid black;
-		background-color: $light-blue-gray;
+		background-color: $light-navy-blue;
 		// Only top and bottom because of inconsistencies
 		// ...with button vs divs.
 		padding: 10px 0px 10px 0px;
@@ -59,7 +59,7 @@
 	}
 	.comment__centering-container__pair-container__submit-edit-button:hover,
 	.comment__centering-container__pair-container__submit-edit-button:active {
-		background-color: $blue-gray;
+		background-color: $navy-blue;
 	}
 
 	.comment__centering-container__pair-container__cancel-button {
