--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerEditItemInfo.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerEditItemInfo.scss
@@ -121,7 +121,7 @@
 		float: left;
 		border: 1px solid black;
 		outline: none;
-		background-color: $light-blue-gray;
+		background-color: $light-navy-blue;
 		// Only top and bottom because of inconsistencies
 		// ...with button vs divs.
 		padding: 10px 0px 10px 0px;
@@ -135,7 +135,7 @@
 	}
 	.form-buttons-centered-container__submit-button:hover,
 	.form-buttons-centered-container__submit-button:active {
-		background-color: $blue-gray;
+		background-color: $navy-blue;
 	}
 
 	.form-buttons-centered-container__cancel-button {
