--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerTopBar.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerTopBar.scss
@@ -22,7 +22,7 @@
 	}
 
 	.outer-search-container--with-border {
-		border: $list-item-search-bar-group-container-border-width solid $blue-gray;
+		border: $list-item-search-bar-group-container-border-width solid $navy-blue;
 	}
 
 	.outer-search-container--invisible {
@@ -32,7 +32,7 @@
 	.outer-search-container__search-bar {
 		display: inline-block;
 		outline: none;
-		border: $list-search-bar-border-width solid $light-blue-gray;
+		border: $list-search-bar-border-width solid $light-navy-blue;
 		padding: 0px $list-search-bar-padding 0px $list-search-bar-padding;
 		height: $list-search-bar-height;
 		width: $item-search-bar-width - ($list-search-bar-border-width * 2) -
@@ -44,14 +44,14 @@
 		// Instead of relative to make sure the button always stays next to the list-search-bar
 		position: absolute;
 		display: inline-block;
-		background-color: $light-blue-gray;
+		background-color: $light-navy-blue;
 		height: $list-item-search-bar-button-height;
 		width: $list-item-search-bar-button-width;
 		cursor: pointer;
 	}
 	.outer-search-container__search-bar-button:hover,
 	.outer-search-container__search-bar-button:active {
-		background-color: $blue-gray;
+		background-color: $navy-blue;
 	}
 
 	.outer-search-container__search-bar-button__icon {
