--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerBugListTableAndRows.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerBugListTableAndRows.scss
@@ -62,8 +62,8 @@
 		@include dead-center();
 
 		// This background color should only appear if there was a problem
-		// ...assigning a different background color to a status-box
-		// ...scss for other colors is in home.scss
+		// ...assigning a different background color to a status-box.
+		// ...the scss for the colors assigned are in home.scss
 		background-color: black;
 		color: white;
 		height: $status-box-height;
