--- a/client/src/SCSS/home/projects-bugs-shared/list/listContainerTableAndRows.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/list/listContainerTableAndRows.scss
@@ -129,8 +129,8 @@
 		@include dead-center();
 
 		// This background color should only appear if there was a problem
-		// ...assigning a different background color to a status-box
-		// ...scss for other colors is in home.scss
+		// ...assigning a different background color to a status-box.
+		// ...the scss for the colors assigned are in home.scss
 		background-color: black;
 		height: $status-box-height;
 		width: $status-box-width;
