Changed color of bug names and bug mass delete list now resets when a project is not longer selected

--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerBugListTableAndRows.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerBugListTableAndRows.scss
@@ -40,6 +40,7 @@
 
 	.bug-list-table__data__overflow-container--bug-color {
 		color: $red-link;
+		color: $blue-link;
 	}
 
 	.bug-list-table__data__overflow-container--completed-color {
