--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerSidebarTableAndRows.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerSidebarTableAndRows.scss
@@ -116,6 +116,7 @@
 
 	.list-sidebar__table__data__overflow-container--bug-color {
 		color: $red-link;
+		color: $blue-link;
 	}
 
 	.list-sidebar__table__data__overflow-container--completed-color {
