--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -5,6 +5,7 @@
 $black: #000000;
 // Blue teals
 $light-blue-teal: #8ba8b3;
+$blue-teal: #6691a3;
 $dark-blue-teal: #50798b;
 // Grays
 $very-light-gray: #f5f5f5;
