--- a/client/src/SCSS/home/account/editAccountModals.scss
+++ b/client/src/SCSS/home/account/editAccountModals.scss
@@ -87,16 +87,15 @@
 		margin-bottom: $form-input-margin-bottom;
 		outline: none;
 		border: 0;
-		background: $light-navy-blue;
+		// This background color should only appear if there was a problem
+		// ...assigning a different background color to this element.
+		// ...the scss for the colors assigned are in home.scss
+		background-color: black;
 		padding: 10px;
 		width: 100%;
 		color: white;
 		font-size: 16px;
 		cursor: pointer;
-	}
-	.form__submit:hover,
-	.form__submit:active {
-		background: $navy-blue;
 	}
 
 	.modal-links-container {
