--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerCommentsBoxIndividualComment.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerCommentsBoxIndividualComment.scss
@@ -44,7 +44,10 @@
 	.comment__centering-container__pair-container__submit-edit-button {
 		float: left;
 		border: 1px solid black;
-		background-color: $light-navy-blue;
+		// This background color should only appear if there was a problem
+		// ...assigning a different background color to this element.
+		// ...the scss for the colors assigned are in home.scss
+		background-color: black;
 		// Only top and bottom because of inconsistencies
 		// ...with button vs divs.
 		padding: 10px 0px 10px 0px;
@@ -56,10 +59,6 @@
 		font-size: 16px;
 		text-align: center;
 		cursor: pointer;
-	}
-	.comment__centering-container__pair-container__submit-edit-button:hover,
-	.comment__centering-container__pair-container__submit-edit-button:active {
-		background-color: $navy-blue;
 	}
 
 	.comment__centering-container__pair-container__cancel-button {
