--- a/client/src/SCSS/home/projects-bugs-shared/item/itemContainerEditItemInfo.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/item/itemContainerEditItemInfo.scss
@@ -121,7 +121,10 @@
 		float: left;
 		border: 1px solid black;
 		outline: none;
-		background-color: $light-navy-blue;
+		// This background color should only appear if there was a problem
+		// ...assigning a different background color to this element.
+		// ...the scss for the colors assigned are in home.scss
+		background-color: black;
 		// Only top and bottom because of inconsistencies
 		// ...with button vs divs.
 		padding: 10px 0px 10px 0px;
@@ -132,10 +135,6 @@
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: 16px;
 		cursor: pointer;
-	}
-	.form-buttons-centered-container__submit-button:hover,
-	.form-buttons-centered-container__submit-button:active {
-		background-color: $navy-blue;
 	}
 
 	.form-buttons-centered-container__cancel-button {
