--- a/client/src/SCSS/home/projects-bugs-shared/list/listContainerCreateItemSidebar.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/list/listContainerCreateItemSidebar.scss
@@ -150,17 +150,16 @@
 		margin-bottom: 15px;
 		outline: none;
 		border: 0;
-		background-color: $light-navy-blue;
+		// This background color should only appear if there was a problem
+		// ...assigning a different background color to this element.
+		// ...the scss for the colors assigned are in home.scss
+		background-color: black;
 		padding: 10px;
 		width: 100%;
 		color: white;
 		font-family: Arial, Helvetica, sans-serif;
 		font-size: 16px;
 		cursor: pointer;
-	}
-	.form__submit:hover,
-	.form__submit:active {
-		background-color: $navy-blue;
 	}
 
 	// These classes are used by the custom hook that handles appearance
