--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -23,14 +23,16 @@ $dark-blue-gray: #215792;
 // Navy blues
 $light-navy-blue: #527294;
 $navy-blue: #45607e;
-// Blue for links
-$blue-link: #005ed8;
+// Links
+/* $blue-link: #005ed8; */
+$blue-link: #0b59be;
+$teal-link: #2a87af;
+$red-link: #f34242;
 // Reds
 $light-red: #cf8c8c;
 $bright-red: #fc1e1e;
 $dark-red: #d36464;
 $darker-red: #d84848;
-$red-link: #f34242;
 // Greens
 $light-green: #ccf5cc;
 // Components
