--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -25,14 +25,14 @@ $light-navy-blue: #527294;
 $navy-blue: #45607e;
 // Links
 /* $blue-link: #005ed8; */
-$blue-link: #0b59be;
-$teal-link: #2a87af;
+$blue-link: #1658ad;
+$teal-link: #2588b3;
 $red-link: #f34242;
 // Reds
 $light-red: #cf8c8c;
 $bright-red: #fc1e1e;
 $dark-red: #d36464;
-$darker-red: #d84848;
+$darker-red: #cc4c4c;
 // Greens
 $light-green: #ccf5cc;
 // Components
