--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -38,6 +38,7 @@ $light-green: #ccf5cc;
 // Components
 $search-filter-sort-bar-color: $light-gray;
 $list-table-background-color: #ffffff;
+$filter-active-color: green;
 // Status colors
 $status-gray: $dark-gray;
 $status-blue: #568dd5;
