Changed active filter color and refactored navbar scss

--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -35,10 +35,12 @@ $dark-red: #d36464;
 $darker-red: #cc4c4c;
 // Greens
 $light-green: #ccf5cc;
+// Yellows
+$yellow: #ffff00;
 // Components
 $search-filter-sort-bar-color: $light-gray;
 $list-table-background-color: #ffffff;
-$filter-active-color: green;
+$filter-active-color: #ffbb00;
 // Status colors
 $status-gray: $dark-gray;
 $status-blue: #568dd5;
