--- a/client/src/SCSS/home/navbar.scss
+++ b/client/src/SCSS/home/navbar.scss
@@ -56,7 +56,7 @@
 
 	.navbar-button__text-container__item-name {
 		margin: 18px 0px 0px 8px;
-		color: #ffff00;
+		color: $yellow;
 		font-style: italic;
 	}
 
