Made the create-item-sidebar elements a bit smaller so everything fits inside the sidebar more easily

--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -92,6 +92,7 @@ $item-search-bar-left: 15px;
 // Margins
 //=========
 $form-input-margin-bottom: 10px;
+$create-item-sidebar-text-input-margin-top: 2px;
 $display-item-field-margin-left: 11px;
 
 //==========
@@ -109,6 +110,7 @@ $item-container-list-sidebar-border-width: 2px;
 // Padding
 //=========
 $list-search-bar-padding: 8px;
+$create-item-sidebar-padding: 6px;
 $edit-item-name-input-padding: 4px;
 
 //======
@@ -119,6 +121,8 @@ $slightly-larger-font-size: $base-font-size + 1px;
 $search-filter-sort-create-item-message-font-size: 24px;
 $list-container-empty-list-message-font-size: 32px;
 $item-container-name-font-size: 28px;
+$create-item-sidebar-label-font-size: 15px;
+$create-item-sidebar-text-input-font-size: 13px;
 $common-line-height: 20px;
 
 //=========
