--- a/client/src/SCSS/home/projects-bugs-shared/list/listContainerCreateItemSidebar.scss
+++ b/client/src/SCSS/home/projects-bugs-shared/list/listContainerCreateItemSidebar.scss
@@ -58,7 +58,7 @@
 	.title {
 		position: relative;
 		padding-top: 24px;
-		font-size: 150%;
+		font-size: 140%;
 	}
 
 	.form__errors {
@@ -71,36 +71,38 @@
 	.form__group-container__input-container__label {
 		float: left;
 		margin-top: 5px;
+		font-size: $create-item-sidebar-label-font-size;
 	}
 
 	.form__char-counter {
 		float: right;
 		margin: 5px 2px 2px 0px;
+		font-size: $create-item-sidebar-label-font-size;
 	}
 
 	.form__text-input {
-		margin-top: 5px;
+		margin-top: $create-item-sidebar-text-input-margin-top;
 		margin-bottom: $form-input-margin-bottom;
 		outline: none;
 		border: 1px solid gray;
 		box-sizing: border-box;
 		background-color: #e5e5e5;
-		padding: 8px;
+		padding: $create-item-sidebar-padding;
 		width: 100%;
-		font-size: 14px;
+		font-size: $create-item-sidebar-text-input-font-size;
 		font-family: Arial, Helvetica, sans-serif;
 	}
 
 	.form__textarea {
-		margin-top: 5px;
+		margin-top: $create-item-sidebar-text-input-margin-top;
 		margin-bottom: $form-input-margin-bottom;
 		outline: none;
 		border: 1px solid gray;
 		background-color: $light-gray;
-		padding: 4px 8px 4px 8px;
-		height: 200px;
+		padding: 4px $create-item-sidebar-padding 4px $create-item-sidebar-padding;
+		height: 150px;
 		width: 100%;
-		font-size: 14px;
+		font-size: $create-item-sidebar-text-input-font-size;
 		line-height: $common-line-height;
 		font-family: Arial, Helvetica, sans-serif;
 		// sizing
