Made blue for bug components darker

--- a/client/src/SCSS/home/home.scss
+++ b/client/src/SCSS/home/home.scss
@@ -36,7 +36,7 @@
 		/* background-color: #c98b8b; */
 	}
 	.js-set-bug-background-color-dark {
-		background-color: $navy-blue;
+		background-color: $darker-navy-blue;
 	}
 	.js-set-bug-background-color-light {
 		background-color: $light-navy-blue;
@@ -61,7 +61,7 @@
 	}
 	.js-set-bug-background-color-with-hover:hover,
 	.js-set-bug-background-color-with-hover:active {
-		background-color: $navy-blue;
+		background-color: $darker-navy-blue;
 	}
 
 
@@ -77,7 +77,7 @@
 		/* background-color: #c98b8b; */
 	}
 	.js-set-bug-border-color-dark {
-		border-color: $navy-blue;
+		border-color: $darker-navy-blue;
 	}
 	.js-set-bug-border-color-light {
 		border-color: $light-navy-blue;
