--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -21,8 +21,10 @@ $light-blue-gray: #607c99;
 $blue-gray: #50677f;
 $dark-blue-gray: #215792;
 // Navy blues
-$light-navy-blue: #527294;
+$lighter-navy-blue: #527294;
+$light-navy-blue: #4d6b8b;
 $navy-blue: #45607e;
+$darker-navy-blue: #3d5774;
 // Links
 /* $blue-link: #005ed8; */
 $blue-link: #1658ad;
