Switched filter active color to purple

--- a/client/src/SCSS/utils/_variables.scss
+++ b/client/src/SCSS/utils/_variables.scss
@@ -42,7 +42,8 @@ $yellow: #ffff00;
 // Components
 $search-filter-sort-bar-color: $light-gray;
 $list-table-background-color: #ffffff;
-$filter-active-color: #ffbb00;
+$filter-active-color: #ae00ff;
+$filter-active-color2: #ffbb00;
 // Status colors
 $status-gray: $dark-gray;
 $status-blue: #568dd5;
